fixed line spacing issue

--- a/stylesheets/test.css
+++ b/stylesheets/test.css
@@ -9,11 +9,11 @@
     font-weight:400;
     font-style: italic;
     font-size: 60px;
-    line-height: 150%;
+    line-height: .9;
     color: #FFF;
     text-shadow: 1px 1px 3px #black;
     display: block;
-    padding: 40px 0;
+    padding: 80px 0;
 }    
 
 span {
